Adicionado activity de detalhe da linha, preciso altera o tema padrão e arrumar o layout

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
             android:name=".ContactActivity"
             android:label="@string/title_activity_contact" >
         </activity>
+        <activity
+            android:name=".LineBusDetailActivity"
+            android:label="@string/title_activity_line_bus_detail" >
+        </activity>
     </application>
 
 </manifest>
