--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
             android:name=".BusStationActivity"
             android:label="@string/title_activity_bus_station" >
         </activity>
+        <activity
+            android:name=".BusStationListActivity"
+            android:label="@string/title_activity_bus_station_list" >
+        </activity>
     </application>
 
 </manifest>
