--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,8 +52,8 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
-            android:name=".BusStation.BusStationListActivity"
-            android:label="@string/title_activity_bus_station_list" >
+            android:name=".StationBusActivity"
+            android:label="@string/title_activity_station_bus" >
         </activity>
     </application>
 
