--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,10 @@
             android:name=".MapsStationBusActivity"
             android:label="@string/title_activity_maps_station_bus" >
         </activity>
+        <activity
+            android:name=".StreetViewActivity"
+            android:label="@string/title_activity_street_view" >
+        </activity>
     </application>
 
 </manifest>
